# suprsend-py-sdk

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
src/: main.py
src/suprsend/: __init__.py  attachment.py  batch.py  batch_response.py  brand.py  bulk_response.py  config.py  constants.py  event.py  event_batch.py  events_bulk.py  exception.py  identity.py  identity_helper.py  language_codes.py  logger.py  messages_api.py  object.py  object_edit.py  object_edit_internal_helper.py  object_helper.py  objects_api.py  request_log.py  request_schema.py  sdkinstance.py  signature.py  subscriber.py  subscriber_batch.py  subscriber_helper.py  subscriber_list.py  subscriber_sync_api.py  subscribers_bulk.py  tenant.py  user_edit.py  user_edit_internal_helper.py  users_api.py  users_edit_bulk.py  utils.py  workflow.py  workflow_api.py  (+4 more)
src/suprsend/json/: workflow.json
src/suprsend/request_json/: event.json  list_broadcast.json  workflow.json  workflow_trigger.json
