[metadata]
name = suprsend-py-sdk
version = 0.0.7
author = Suprsend
author_email = sanjeev@suprsend.com
description = Python SDK to integrate with Suprsend Platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/suprsend/suprsend-py-sdk
project_urls =
    Bug Tracker = https://github.com/suprsend/suprsend-py-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    jsonschema
    requests
include_package_data = True

[options.packages.find]
where = src
