[metadata]
name = suprsend-py-sdk
version = attr: suprsend.__version__
author = Suprsend
author_email = sanjeev@suprsend.com
description = Suprsend library for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/suprsend/suprsend-py-sdk
project_urls =
    Bug Tracker = https://github.com/suprsend/suprsend-py-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    jsonschema
    requests
    python-magic
include_package_data = True

[options.packages.find]
where = src
