[metadata]
name = suprsend-py-sdk
version = attr: suprsend.version.__version__
author = Suprsend
author_email = sanjeev@suprsend.com
description = Suprsend library for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/suprsend/suprsend-py-sdk
project_urls =
    Bug Tracker = https://github.com/suprsend/suprsend-py-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    jsonschema
    requests

[options.extras_require]
magic =
    python-magic
include_package_data = True

[options.package_data]
suprsend =
    request_json/*.json

[options.packages.find]
where = src
exclude =
    suprsend.request_json
